  Begin transaction, Commit and Rollback can be selected from option menu. 
    Transactions can be nested as savepoints in SQLite (is the first transaction
    rolled back all updates are rolled back). aSQLiteManager ensures that SQL
    statements are stored in the database even if updates are rolled back.
    See http://www.sqlite.org/lang_savepoint.html for savepoint specifications.
  
Working on:
  Export (as SQL script) and restore of databases
  Planning further development, feature request welcome, could be:
	Running scripts
	Sort data / query results by clicking on title
	Data entry and editing form use editing button at each row

Version 1.0
  First production release of aSQLiteManager
  No known bugs
  
Version 0.81
  aSQLiteManager can be opened if a .sqlite or .db file is clicked on in
    OI File Manager, in Adao Teams File Manager and in Simplest File Manager
  Insert into SQL builder mode
  A few bug fixed

Version 0.80
  The first beta version of aSQLiteManager
  More advanced SQL builder (for Select, Create view, Create table, Drop table,
    Drop view and Delete from)
  The sqlite_master table now included in list of tables and sorted by name
  Create new database and open it
  Headers on query results
  Don't save the same SQL more than one time (unique constraints on SQL)
  Index viewer

Version 0.70
  Query result in data grid
  Executed statements can be saved in current database in a table named
    aSQLiteManager (configuration)
  A simple SQL builder where tables and fields from the "select fields from tables"
    part can be selected from two lists
  Paging on Table and View data viewer implemented. Numbers of records to return can be
    configured form option menu at the main form
  Clicking on a field in the data browser copy the content to the clip board
  A help screen with a little help, links and mailto
  
Version 0.6
  Simple execution of SQL and display of result (for the time being as comma
  separated lines in list)
  