@@ -1,0 +1,4 @@
+#Fri Feb 18 08:10:04 CET 2011
+eclipse.preferences.version=1
+formatter_profile=_mh
+formatter_settings_version=11
